--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
 
-@import "_vars";
-@import "_mixins";
-
+@import "_base";
 @import "globals";
