--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -8,6 +8,7 @@
   border-radius: 5px;
   border: none;
   margin-bottom: 3px;
+  font-weight: bold;
 
   // spacing between icon and text
   display: flex;
