--- a/src/components/TextField.module.scss
+++ b/src/components/TextField.module.scss
@@ -25,6 +25,7 @@
   border-radius: 5px;
   border: 1px solid $text;
   margin-top: 0.5rem;
+  width: 100%;
 
   &::placeholder {
     color: $grey1;
