--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,7 +1,8 @@
 $yellow: #fdf35a;
 $text: #333333;
 $link: #77755d;
-$bg: #efefef;
+// $bg: #efefef;
+$bg: #f4f4f4;
 
 $focus: #003cff;
 $grey1: $text;
