--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,9 @@
 
 body {
   background: $bg;
+  // background-image: url("https://uploads-ssl.webflow.com/602684bac0826252920afbb4/6026df971769662a4b6100b0_Screenshot%202021-02-12%20at%2020.04.41.png");
+  // background-image: url("./memphis-mini.png");
+  // background-image: url("./dot-grid.png");
 }
 
 h1,
