--- a/src/components/_Layout.module.scss
+++ b/src/components/_Layout.module.scss
@@ -19,6 +19,16 @@
   }
 }
 
+.smallHeadline {
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+
+  @media screen and (min-width: 700px) {
+    font-size: 2.5rem;
+  }
+}
+
 .caption {
   margin-top: 0.75rem;
   color: $grey2;
@@ -46,4 +56,8 @@
   text-align: center;
   color: $grey2;
   padding: 45px 25px;
+
+  a {
+    @include textLink;
+  }
 }
