--- a/src/components/ProjectList.module.scss
+++ b/src/components/ProjectList.module.scss
@@ -1,22 +1,67 @@
 @import "../styles/_base";
 
-.outer {
-}
-
 .list {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 2rem;
 }
 
 .listItem {
+  padding: 20px 0px;
+  border-bottom: 2px solid $grey4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  button {
+    opacity: 0;
+  }
+
+  &:hover button {
+    opacity: 1;
+  }
+
+  &:first-child {
+    padding-top: 10px;
+  }
 }
 
 .name {
+  margin: 0;
+  margin-bottom: 0.5rem;
 }
 
 .meta {
+  margin: 0;
+  color: $grey2;
 }
 
 .remove {
-}
+  border: none;
+  background: none;
+  cursor: pointer;
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
 
-.addAnother {
+  &:hover {
+    background: $bg;
+
+    svg rect {
+      fill: $grey2;
+    }
+  }
+
+  &:focus {
+    background: $focus;
+    outline: none;
+
+    svg rect {
+      fill: white;
+    }
+  }
 }
