--- a/src/components/TextField.module.scss
+++ b/src/components/TextField.module.scss
@@ -9,9 +9,10 @@
 }
 
 .hint {
-  margin-top: 0.5rem;
+  margin-top: 0.3rem;
   @include bodyTextS;
-  color: $grey1;
+  color: $grey2;
+  margin-bottom: 0;
 }
 
 .error {
@@ -23,7 +24,7 @@
   @include bodyTextM;
   padding: 10px;
   border-radius: 5px;
-  border: 1px solid $text;
+  border: 2px solid $grey2;
   margin-top: 0.5rem;
   width: 100%;
 
@@ -33,7 +34,7 @@
 
   &:focus {
     outline: none;
-    border-color: $focus;
+    border-color: $text;
     box-shadow: 0px 0px 0px 2px $focus;
   }
 }
