add dots and other style improvements

--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -38,11 +38,11 @@
     box-shadow: none;
   }
 
-  @media screen and (min-width: 700px) {
-    width: max-content;
-    display: flex;
-    padding: 12px 55px;
-  }
+  // @media screen and (min-width: 700px) {
+  //   width: max-content;
+  //   display: flex;
+  //   padding: 12px 55px;
+  // }
 }
 
 .primaryButton {
