--- a/src/components/Panel.module.scss
+++ b/src/components/Panel.module.scss
@@ -12,6 +12,19 @@
   *:first-child {
     margin-top: 0;
   }
+
+  animation: fadeIn 0.3s ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(3px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 .inner {
