--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -4,7 +4,7 @@ $link: #77755d;
 // $bg: #efefef;
 $bg: #f4f4f4;
 
-$focus: #003cff;
+$focus: #0059ff;
 $grey1: $text;
 $grey2: #686868;
 $grey3: #cccbc3;
