--- a/src/components/TextField.module.scss
+++ b/src/components/TextField.module.scss
@@ -28,6 +28,8 @@
   margin-top: 0.5rem;
   width: 100%;
 
+  transition: border-color 0.1s ease-out, box-shadow 0.1s ease-out;
+
   &::placeholder {
     color: $grey1;
   }
