--- a/src/components/_Layout.module.scss
+++ b/src/components/_Layout.module.scss
@@ -29,6 +29,7 @@
   margin-top: 3rem;
   font-size: 3rem;
   margin-bottom: 0;
+  animation: fadeIn 0.1s ease-out;
 
   @media screen and (min-width: 700px) {
     font-size: 4rem;
@@ -39,6 +40,7 @@
   margin-top: 3rem;
   margin-bottom: 1.5rem;
   font-size: 2rem;
+  animation: fadeIn 0.1s ease-out;
 
   @media screen and (min-width: 700px) {
     font-size: 2.5rem;
