--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,13 +1,3 @@
-$yellow: #fdf35a;
-$text: #333333;
-$link: #77755d;
-// $bg: #efefef;
-$bg: #f4f4f4;
-
-$focus: #0059ff;
-$grey1: $text;
-$grey2: #686868;
-$grey3: #cccbc3;
-$grey4: $bg;
-
+@import "_vars";
+@import "_animations";
 @import "_mixins";
