--- a/src/components/ProjectList.module.scss
+++ b/src/components/ProjectList.module.scss
@@ -48,6 +48,7 @@
   align-items: center;
   width: 35px;
   height: 35px;
+  transition: opacity 0.1s ease-out, background 0.1s ease-out;
 
   &:hover {
     background: $bg;
