--- a/src/components/TextField.module.scss
+++ b/src/components/TextField.module.scss
@@ -17,7 +17,9 @@
 
 .error {
   margin-top: 0.5rem;
-  @include bodyTextS;
+  @include bodyTextM;
+  color: $error;
+  font-weight: bold;
 }
 
 .input {
