--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,7 +9,7 @@
 }
 
 @mixin bodyTextS {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   line-height: 140%;
 }
 
@@ -29,6 +29,15 @@
 
   @media screen and (min-width: 700px) {
     font-size: 1.6rem;
+  }
+}
+
+@mixin bodyTextXXL {
+  font-size: 1.6rem;
+  line-height: 120%;
+
+  @media screen and (min-width: 700px) {
+    font-size: 1.8rem;
   }
 }
 
