fix text colour

--- a/src/components/_Layout.module.scss
+++ b/src/components/_Layout.module.scss
@@ -30,6 +30,7 @@
   font-size: 3rem;
   margin-bottom: 0;
   animation: fadeIn 0.2s ease-out;
+  line-height: 1.2;
 
   @media screen and (min-width: 700px) {
     font-size: 4rem;
