--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,7 +4,9 @@ $link: #77755d;
 // $bg: #efefef;
 $bg: #f4f4f4;
 
-$focus: #0059ff;
+// $focus: #0059ffc7;
+$blue: #0059ff;
+
 $grey1: $text;
 $grey2: #686868;
 $grey3: #cccbc3;
