--- a/src/components/TextField.module.scss
+++ b/src/components/TextField.module.scss
@@ -1,6 +1,7 @@
 @import "../styles/_base";
 
 .outer {
+  margin-top: 1.5rem;
 }
 
 .label {
@@ -41,5 +42,9 @@
     outline: none;
     border-color: $focus;
     box-shadow: 0px 0px 0px 1px $focus;
+  }
+
+  &[type="date"] {
+    width: 160px;
   }
 }
